--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,9 @@
 
 	<!-- choosing h1 here, applies it to ALL h1 on this page -->
 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap"> 
 
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -26,7 +28,7 @@
 
 	<center>
 		<!-- Example of inline styling -->
-	<h1 class="firstpageheader" style="font-size: 40px; text-transform: uppercase;">Joshua Kornmayer</h1>
+	<h1 class="tracking-in-contract-bck">Joshua Kornmayer</h1>
 	<h3>828-817-2996</h3>
 	<h3>jbkornmayer80@gmail.com</h3>
 	<h3>910 Cameron Village Drive Matthews, NC 28105 Apt. 205</h3>
@@ -62,7 +64,7 @@
 			<li>Communicated and entertained on-air to a wide range of audiences</li>
 		</ol>
 
-	<h2>Work Experience:</h2>
+	<h2>Work Experience</h2>
 		
 		
 		
