--- a/contactus.html
+++ b/contactus.html
@@ -5,6 +5,11 @@
 
 
 	<link rel="stylesheet" type="text/css" href="resume.css">
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	
 </head>
 
 <body>
@@ -20,7 +25,7 @@
 		</ul>
 	</nav>
 
-	<h1 class="firstpageheader">Contact Joshua</h1>
+	<h1 class="tracking-in-contract-bck">Contact Joshua</h1>
 
 	<div class="testbuttons">
 		<button>Click here to test button</button>
